--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
+        "stimulus": "^1.1.1",
         "turbolinks": "^5.2.0",
-        "vue-template-compiler": "^2.6.10",
-        "bootstrap": "^4.0.0"
+        "vue-template-compiler": "^2.6.10"
     }
 }
